🚀 Adds Bootstrap css 🚀🚀

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hey</title>
+    <title>Hey 🚀</title>
+    <!--express serves both as public and node_modules as 'root' directories-->
+    <!--that's why i don't need a full qualified path here-->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
-<h1>Hi again!</h1>
+<div class="container">
+    <h1>Hi again 🚀!</h1>
+    <p>🚀 express serves both as public and node_modules as 'root' directories. 🚀</p>
+</div>
 </body>
 </html>
